# MLOps_UdM

./: .gitignore  README.md  pyproject.toml
00-Setup/: 04-tooling.md  05-data-and-secrets.md  06-github-actions.md
00-Setup/scripts/: setup_poetry_mac.sh  setup_poetry_windows.ps1  setup_uv_mac.sh  setup_uv_windows.ps1
01-Intro-ML/: 01_mlops_intro_notebook.ipynb  generate_data.py
02-Experiment-Tracking/: README.md
02-Experiment-Tracking/notebooks/: 00_data_preparation.ipynb  01_experiment_tracking_intro.ipynb  01_first_steps_without_tracking.ipynb  02_experiment_tracking_intro.ipynb  03_mlflow_advanced.ipynb  04_mlflow_basics.ipynb
02-Experiment-Tracking/scenarios/: scenario-1.ipynb  scenario-2.ipynb
02-Experiment-Tracking/scripts/: preprocess_data.py  train_with_basic_mlflow.py  train_with_full_mlflow.py
03-Orchestrarion/: README.md  duration-prediction.ipynb  duration-prediction.py
03-Orchestrarion/Prefect-pipelines/: README.md  duration_prediction_prefect.py
03-Orchestrarion/Prefect-pipelines/models/: preprocessor_old.b
04-Deployment/: README.md
04-Deployment/deploy/batch-deploy/: README.md  pyproject.toml  test_simple_flow.py
04-Deployment/deploy/batch-deploy/config/: __init__.py  settings.py
04-Deployment/deploy/batch-deploy/scripts/: deploy_prefect.py  setup_batch_system.sh
04-Deployment/deploy/batch-deploy/src/: __init__.py  batch_predictor.py  data_generator.py  prefect_flows.py
04-Deployment/deploy/web-service/: README.md  README_CONCEPTOS.md  predict.py  pyproject.toml  test.py
Project/: Readme.md
(+9 files in other folders)
