[project]
name = "taxi-batch-prediction"
version = "0.1.0"
description = "NYC Taxi Trip Duration Batch Prediction with Prefect"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prefect>=2.14.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "jupyter>=1.0.0",
]
monitoring = [
    "prometheus-client>=0.16.0",
    "grafana-api>=1.0.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
